# dotfiles

./: FONTS.md  README.md  STRUCTURE.md  bootstrap.sh
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
bash/: .bash_profile  .bashrc
editor/: .editorconfig  .eslintrc.json  .prettierignore  .prettierrc  tsconfig.json
git/: .gitconfig  .gitignore_global
kitty/.config/kitty/: kitty.conf
nvim/.config/nvim/: init.lua
python/: pyproject.toml  requirements-dev.txt
tmux/: .tmux.conf
vim/: .vimrc
zsh/: .aliases  .exports  .functions  .zshrc
